--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@types/react": "^18.0.26",
     "antd": "^5.0.4",
     "babel-plugin-styled-components": "^2.0.7",
+    "ethers": "^5.7.2",
+    "lodash": "^4.17.21",
     "next": "^13.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
