--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.0.4",
     "babel-plugin-styled-components": "^2.0.7",
     "ethers": "^5.7.2",
+    "js-file-download": "^0.4.12",
     "lodash": "^4.17.21",
     "next": "^13.0.6",
     "react": "^18.2.0",
