--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@types/react": "^18.0.26",
+    "@web3modal/ethereum": "^2.0.0-beta.10",
+    "@web3modal/react": "^2.0.0-beta.10",
     "antd": "^5.0.4",
     "babel-plugin-styled-components": "^2.0.7",
     "ethers": "^5.7.2",
@@ -15,6 +17,7 @@
     "next": "^13.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "wagmi": "^0.9.5"
   }
 }
