--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@web3modal/react": "^2.0.0-beta.10",
     "antd": "^5.0.4",
     "babel-plugin-styled-components": "^2.0.7",
+    "crypto-js": "^4.1.1",
     "ethers": "^5.7.2",
     "js-file-download": "^0.4.12",
     "lodash": "^4.17.21",
