--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "crypto-js": "^4.1.1",
     "ethers": "^5.7.2",
+    "ipfs-http-client": "^60.0.0",
     "js-file-download": "^0.4.12",
     "lodash": "^4.17.21",
     "next": "^13.0.6",
