--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start -p 8080"
   },
   "dependencies": {
+    "@rematch/core": "^2.2.0",
     "@types/react": "^18.0.26",
     "@web3modal/ethereum": "^2.0.0-beta.10",
     "@web3modal/react": "^2.0.0-beta.10",
@@ -20,6 +21,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6",
-    "wagmi": "^0.9.5"
+    "wagmi": "^0.9.5",
+    "@rematch/persist": "*",
+    "react-redux": "7.2.0",
+    "redux": "4.0.5"
   }
 }
