--- a/package.json
+++ b/package.json
@@ -7,23 +7,25 @@
   },
   "dependencies": {
     "@rematch/core": "^2.2.0",
+    "@rematch/persist": "*",
     "@types/react": "^18.0.26",
     "@web3modal/ethereum": "^2.0.0-beta.10",
     "@web3modal/react": "^2.0.0-beta.10",
     "antd": "^5.0.4",
+    "axios": "^1.3.4",
     "babel-plugin-styled-components": "^2.0.7",
     "crypto-js": "^4.1.1",
     "ethers": "^5.7.2",
     "ipfs-http-client": "^60.0.0",
     "js-file-download": "^0.4.12",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "^13.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6",
-    "wagmi": "^0.9.5",
-    "@rematch/persist": "*",
     "react-redux": "7.2.0",
-    "redux": "4.0.5"
+    "redux": "4.0.5",
+    "styled-components": "^5.3.6",
+    "wagmi": "^0.9.5"
   }
 }
