--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "7.2.0",
     "redux": "4.0.5",
     "styled-components": "^5.3.6",
-    "wagmi": "^0.9.5"
+    "wagmi": "^0.9.5",
+    "xlsx": "^0.18.5"
   }
 }
