--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NEXT_PUBLIC_PROJECT_ID=da99df8d17594172585efb949144098d
 NEXT_PUBLIC_PROJECT_SECRET_KEY=TUANDQ_SECRET_KEY
 NEXT_PUBLIC_SERVICE_URL=http://localhost:2112
 NEXT_PUBLIC_TIMEOUT=86400
+NEXT_PUBLIC_HOST=https://naut.vercel.app
