--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@web3modal/ethereum": "2.6.2",
     "@web3modal/react": "2.6.2",
     "antd": "^5.0.4",
-    "axios": "^1.3.4",
+    "axios": "^1.7.7",
     "babel-plugin-styled-components": "^2.0.7",
     "crypto-js": "^4.1.1",
     "ethers": "^5.7.2",
@@ -24,10 +24,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "7.2.0",
+    "react-turnstile": "^1.1.4",
     "redux": "4.0.5",
     "styled-components": "^5.3.6",
+    "viem": "1.2.5",
     "wagmi": "1.3.3",
-    "xlsx": "^0.18.5",
-    "viem": "1.2.5"
+    "xlsx": "^0.18.5"
   }
 }
