#add cloudflare turnstile

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ NEXT_PUBLIC_PROJECT_SECRET_KEY=TUANDQ_SECRET_KEY
 NEXT_PUBLIC_SERVICE_URL=http://localhost:2112
 NEXT_PUBLIC_TIMEOUT=86400
 NEXT_PUBLIC_HOST=https://naut.vercel.app
+NEXT_PUBLIC_TURNSTILE_SITE_KEY=0x4AAAAAAAzbUXu9tBbouE2A
