--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "ipfs-http-client": "^60.0.0",
     "js-file-download": "^0.4.12",
     "lodash": "^4.17.21",
+    "lunar-javascript": "^1.6.13",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.46",
     "next": "^13.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
